Flickering of viewport when rotating and zooming #58243

Closed
opened 2018-11-30 00:57:22 +01:00 by slawek · 8 comments

System Information
Operating system: Windows 7
Graphics card: GTX 1070

Blender Version
Broken:
2.80 Beta
Date: 2018-11-29 15:57, Hash: 26d5a3625e, Branch: blender2.8
Worked: (optional)

Flickering occurs (or its random change of view type?) when rotating around object with MMB and also when zooming in and out with mouse wheel). It occurs when zoomed in quite a bit, seams to work fine when zoomed out.

Exact steps for others to reproduce the error
Open attached file - it should open already with an visual error. Now click MMB and navigate around object - flickering should occur{F5761170}. try also zoom in and out with scroll wheel. Flickering/changes occur as well.

**System Information** Operating system: Windows 7 Graphics card: GTX 1070 **Blender Version** Broken: 2.80 Beta Date: 2018-11-29 15:57, Hash: 26d5a3625ed, Branch: blender2.8 Worked: (optional) Flickering occurs (or its random change of view type?) when rotating around object with MMB and also when zooming in and out with mouse wheel). It occurs when zoomed in quite a bit, seams to work fine when zoomed out. **Exact steps for others to reproduce the error** Open attached file - it should open already with an visual error. Now click MMB and navigate around object - flickering should occur{[F5761170](https://archive.blender.org/developer/F5761170/EXAMPLE_Bottle.blend)}. try also zoom in and out with scroll wheel. Flickering/changes occur as well.
Author

Added subscriber: @nezumi

Added subscriber: @nezumi

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce this issue with a build from today, could you retry with a recent blender version from https://builder.blender.org/download/ ?

I can not reproduce this issue with a build from today, could you retry with a recent blender version from https://builder.blender.org/download/ ?
Author

Still the same with Build from January 6 2019, but I have never encountered that problem with files that were created inside of Blender 2.8. Attached file was made in 2.79 and loaded into 2.8, re-saved. Maybe it is some sort of weird, marginal glitch.

Still the same with Build from January 6 2019, but I have never encountered that problem with files that were created inside of Blender 2.8. Attached file was made in 2.79 and loaded into 2.8, re-saved. Maybe it is some sort of weird, marginal glitch.
Clément Foucault was assigned by Sebastian Parborg 2019-01-07 10:37:59 +01:00

Actually, I can reproduce this now too (don't know why I couldn't before). It seems to only happen in ortho view.

If I zoom in and out just right, I can get it to stay in the incorrect render mode (so it's not flickering):

render.png
How it should look:
normal.png

So it seems like it's entering x-ray mode or just skipping rendering the solid faces.

Actually, I can reproduce this now too (don't know why I couldn't before). It seems to only happen in ortho view. If I zoom in and out just right, I can get it to stay in the incorrect render mode (so it's not flickering): ![render.png](https://archive.blender.org/developer/F6208342/render.png) How it should look: ![normal.png](https://archive.blender.org/developer/F6208351/normal.png) So it seems like it's entering x-ray mode or just skipping rendering the solid faces.
Author

Ow yeah when you carefully match the distance or angle you can make it stay in incorrect mode. Sorry I used "flickering" incorrectly.
Also correction - it happens also in files created in 2.80. It just happened to me with other project, fully started in 2.80 so it is a problem.

Ow yeah when you carefully match the distance or angle you can make it stay in incorrect mode. Sorry I used "flickering" incorrectly. Also correction - it happens also in files created in 2.80. It just happened to me with other project, fully started in 2.80 so it is a problem.

This issue was referenced by d5b4d71ee7

This issue was referenced by d5b4d71ee7b8e5d23f1317917b94a5666ebda5e1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58243
No description provided.